--- a/wiki/CR_MetricShader.wiki
+++ b/wiki/CR_MetricShader.wiki
@@ -1,5 +1,14 @@
 #summary Alters the background color of members to indicate status according to a nominated Metric.
 <wiki:toc max_depth="3" />
+= Download = 
+Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_MetricShader/
+
+An instructional screencast of this plugin is available from http://tv.devexpress.com/CRMetricShader.movie
+
+== Installation ==
+
+Installation instructions can be found on the InstallInstructions page.
+
 = Introduction =
 
 NB: I have recently been looking back through some shared Google docs and have found evidence suggesting the original idea for this plugin was that of Dan Gilkerson (<- Great Bloke) 
@@ -26,15 +35,6 @@ Additionally you can change any of the colors, opacities of those colors or the 
 You can also enable/disable the plugin entirely.
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/Options563.png
-
-== Installation ==
-
-Installation instructions can be found on the InstallInstructions page.
-
-== Download == 
-Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_MetricShader/
-
-An instructional screencast of this plugin is available from http://tv.devexpress.com/CRMetricShader.movie
 
 == Usage ==
 
