--- a/wiki/CR_ReSharperCompatibility.wiki
+++ b/wiki/CR_ReSharperCompatibility.wiki
@@ -4,13 +4,7 @@
 
 This is a simple plugin and a set of key bindings (currently 34 listed below) designed to ease the process of moving from Resharper or just testing out Coderush and RefactorPro from a Resharper user's point of view.
 
-= Download = 
-Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_ReSharperCompatibility/
-
-There you will find the latest plugin, and also the default shortcuts to help you use it.
-
-= Installation =
-The InstallInstructions page for general instructions will help you correctly place the plugin dll, but you should also install the shortcut files. 
+= Additional Install Help =
 
 The shortcut ini files should be extracted to your Settings\IDE folder. You can find the Settings folder through the use of a button on the DevExpress 'About' dialog. Found on the DevExpress\About menu
 
